--- a/.github/workflows/backend_tests.yml
+++ b/.github/workflows/backend_tests.yml
@@ -1,31 +1,50 @@
-name: Backend Tests
+name: Python - py coverage test
+
 on:
   workflow_dispatch:
   pull_request:
   push:
-    branches: # Specify your branches here
-      - main # The 'main' branch
-      - 'releases/*' # The release branches
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.10"]
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Test with pytest
-        run: |
-          coverage run -m pytest -s
-      - name: Generate Coverage Report
-        run: |
-          coverage report -m
+    - name: Checkout Code
+      uses: actions/checkout@v3
+      with:
+        ref: ${{ github.event.pull_request.head.sha }}
+        fetch-depth: 0
+        
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.10"
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install coverage
+      working-directory: PYTHON/py
+  
+    - name: Run tests with coverage
+      run: |
+        coverage run -m pytest -s
+        coverage xml -o .qodana/code-coverage/coverage.xml
+      working-directory: PYTHON/py
+
+    - name: Archive coverage data
+      uses: actions/upload-artifact@v2
+      with:
+        name: py-coverage-data
+        path: PYTHON/py/.qodana/code-coverage
+
+    - name: Qodana Scan
+      uses: JetBrains/qodana-action@main
+      env:
+        QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_PYTHON }}
+      with:
+        args: "-i,PYTHON/py,--linter,jetbrains/qodana-python:2023.3-eap"
+        pr-mode: false
