--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -35,7 +35,7 @@ jobs:
     
       - name: Run tests with coverage
         run: |
-          coverage run -m unittest
+          coverage run -m pytest -s
           coverage xml -o .qodana/code-coverage/coverage.xml
 
       - name: Archive coverage data
