--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "amazon-cognito-identity-js": "^6.3.12",
     "aws-amplify": "^6.0.27",
+    "axios": "^1.6.8",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
