--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,21 +24,21 @@ jobs:
         with:
           context: ./frontend
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/frontend:latest
+          tags: laserchads/frontend:latest
 
       - name: Build and push apig-main Docker image
         uses: docker/build-push-action@v2
         with:
           context: ./backend/apig-main
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/apig-main:latest
+          tags: laserchads/apig-main:latest
 
       - name: Build and push apig-id-share Docker image
         uses: docker/build-push-action@v2
         with:
           context: ./backend/apig-id-share
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/apig-id-share:latest
+          tags: laserchads/apig-id-share:latest
 
       - name: Build and push options_lambda_function Docker image
         uses: docker/build-push-action@v2
@@ -46,7 +46,7 @@ jobs:
           context: ./backend/options_lambda_function
           dockerfile: ./backend/options_lambda_function/dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/options_lambda_function:latest
+          tags: laserchads/options_lambda_function:latest
 
       - name: Build and push cart Docker image
         uses: docker/build-push-action@v2
@@ -54,7 +54,7 @@ jobs:
           context: ./backend/cart
           dockerfile: ./backend/cart/dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/cart:latest
+          tags: laserchads/cart:latest
 
       - name: Build and push product-microservice Docker image
         uses: docker/build-push-action@v2
@@ -62,5 +62,5 @@ jobs:
           context: ./backend/product-microservice
           dockerfile: ./backend/product-microservice/dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/product-microservice:latest #
+          tags: laserchads/product-microservice:latest #
       
