--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -40,24 +40,24 @@ jobs:
           push: true
           tags: laserchads/apig-id-share:latest
 
-      # - name: Build and push options_lambda_function Docker image
-      #   uses: docker/build-push-action@v2
-      #   with:
-      #     context: ./backend/options_lambda_function
-      #     push: true
-      #     tags: laserchads/options_lambda_function:latest
+      - name: Build and push options_lambda_function Docker image
+        uses: docker/build-push-action@v2
+        with:
+          dockerfile: ./backend/options_lambda_function/dockerfile
+          push: true
+          tags: laserchads/options_lambda_function:latest
 
       - name: Build and push cart Docker image
         uses: docker/build-push-action@v2
         with:
-          context: ./backend/cart
+          dockerfile: ./backend/cart/dockerfile
           push: true
           tags: laserchads/cart:latest
 
       - name: Build and push product-microservice Docker image
         uses: docker/build-push-action@v2
         with:
-          context: ./backend/product-microservice
+          dockerfile: ./backend/product-microservice/dockerfile
           push: true
           tags: laserchads/product-microservice:latest #
       
