--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -43,6 +43,7 @@ jobs:
       - name: Build and push options_lambda_function Docker image
         uses: docker/build-push-action@v2
         with:
+          context: .
           dockerfile: ./backend/options_lambda_function/dockerfile
           push: true
           tags: laserchads/options_lambda_function:latest
@@ -50,6 +51,7 @@ jobs:
       - name: Build and push cart Docker image
         uses: docker/build-push-action@v2
         with:
+          context: .
           dockerfile: ./backend/cart/dockerfile
           push: true
           tags: laserchads/cart:latest
@@ -57,6 +59,7 @@ jobs:
       - name: Build and push product-microservice Docker image
         uses: docker/build-push-action@v2
         with:
+          context: .
           dockerfile: ./backend/product-microservice/dockerfile
           push: true
           tags: laserchads/product-microservice:latest #
